--- a/index.html
+++ b/index.html
@@ -48,15 +48,88 @@
                 <h4>Sugestões para você</h4>
                 <h4>Ver tudo</h4>
             </div>
+            <!---->
+            <div class="usuariosSugeridos">
+                <div class="usuarioSugeridoCard">
+                    <div class="sugestãoCardContent">
+                        <div><img src="./src/tab-icon.png" alt=""></div>
+                        <div>
+                            <h4>yokuny</h4>
+                            <p>Felipe Rangel Ribeiro</p>
+                        </div>
+                    </div>
+                    <h4>Seguir</h4>
+                </div>
+                <div class="usuarioSugeridoCard">
+                    <div class="sugestãoCardContent">
+                        <div><img src="./src/tab-icon.png" alt=""></div>
+                        <div>
+                            <h4>yokuny</h4>
+                            <p>Felipe Rangel Ribeiro</p>
+                        </div>
+                    </div>
+                    <h4>Seguir</h4>
+                </div>
+                <div class="usuarioSugeridoCard">
+                    <div class="sugestãoCardContent">
+                        <div><img src="./src/tab-icon.png" alt=""></div>
+                        <div>
+                            <h4>yokuny</h4>
+                            <p>Felipe Rangel Ribeiro</p>
+                        </div>
+                    </div>
+                    <h4>Seguir</h4>
+                </div>
+                <div class="usuarioSugeridoCard">
+                    <div class="sugestãoCardContent">
+                        <div><img src="./src/tab-icon.png" alt=""></div>
+                        <div>
+                            <h4>yokuny</h4>
+                            <p>Felipe Rangel Ribeiro</p>
+                        </div>
+                    </div>
+                    <h4>Seguir</h4>
+                </div>
+                <div class="usuarioSugeridoCard">
+                    <div class="sugestãoCardContent">
+                        <div><img src="./src/tab-icon.png" alt=""></div>
+                        <div>
+                            <h4>yokuny</h4>
+                            <p>Felipe Rangel Ribeiro</p>
+                        </div>
+                    </div>
+                    <h4>Seguir</h4>
+                </div>
+            </div>
+            <!---->
+            <div class="instagramTermos">
+                <a href="">Sobre</a> • 
+                <a href="">Ajuda</a> • 
+                <a href="">Imprensa</a> • 
+                <a href="">API</a> • 
+                <a href="">Carreiras</a> • 
+                <a href="">Privacidade</a> • 
+                <a href="">Termos</a> • 
+                <a href="">Localizações</a> • 
+                <a href="">Contas mais relevantes</a> • 
+                <a href="">Hashtags</a> • 
+                <a href="">Idioma</a></a>
+            </div>
+            <div class="copywriter">
+                <p>© 2021 INSTAGRAM DO FACEBOOK</p>
+            </div>
         </div>
+        <!---->
         <div class="mainContent">
             <!--story-->
             <div class="stories">
                 <div id="storiesSize">
-
                 </div>
             </div>
             <!--feed-->
+            <div style="height: 120vh;">
+
+            </div>
         </div>
     </main>
 </body>
