--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./style/mainContentGrid.css">
     <link rel="stylesheet" href="./style/stories.css">
     <link rel="stylesheet" href="./style/sideBar.css">
+    <link rel="stylesheet" href="./style/feed.css">
 </head>
 <body>
     <!--HeaderBar-->
@@ -127,8 +128,20 @@
                 </div>
             </div>
             <!--feed-->
-            <div style="height: 120vh;">
-
+            <div class="feed">
+                <div class="postCard">
+                    <div class="postCardHeader">
+                        <div class="postOwnerName">
+                            <img src="./src/tab-icon.png" alt="">
+                            <h4>nickname</h4>
+                        </div>
+                        <ion-icon name="ellipsis-horizontal"></ion-icon>
+                    </div>
+                    <!--post-->
+                    <div class="postContent">
+                        
+                    </div>
+                </div>
             </div>
         </div>
     </main>
