--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
                             </div>
                         </div>
                         <div class="postCardLikes">
-                            <img src="./src/stories_background.jpg" alt="">
-                            <p>Curtido por</p><h4>respondeai</h4><p>e</p><h4> outras 10.542 pessoas</h4></p>
+                            <img id="likeImgUser1">
+                            <p>Curtido por</p><h4>_raskolnikov</h4><p>e</p><h4> outras 16 pessoas</h4></p>
                         </div>
                     </div>
                 </div>
@@ -186,8 +186,8 @@
                             </div>
                         </div>
                         <div class="postCardLikes">
-                            <img src="./src/stories_background.jpg" alt="">
-                            <p>Curtido por</p><h4>respondeai</h4><p>e</p><h4> outras 10.542 pessoas</h4></p>
+                            <img id="likeImgUser2">
+                            <p>Curtido por</p><h4>yokuny</h4><p>e</p><h4> outras 702 pessoas</h4></p>
                         </div>
                     </div>
                 </div>
@@ -219,8 +219,8 @@
                             </div>
                         </div>
                         <div class="postCardLikes">
-                            <img src="./src/stories_background.jpg" alt="">
-                            <p>Curtido por</p><h4>respondeai</h4><p>e</p><h4> outras 10.542 pessoas</h4></p>
+                            <img id="likeImgUser3">
+                            <p>Curtido por</p><h4>fake.avatar</h4><p>e</p><h4> outras 10.542 pessoas</h4></p>
                         </div>
                     </div>
                 </div>
