--- a/index.html
+++ b/index.html
@@ -126,6 +126,62 @@
             <!--story-->
             <div class="stories">
                 <div id="storiesSize">
+                    <div>
+                        <div>
+                            <img src="./src/stories_background.jpg" alt="">
+                            <img alt="" id="storyImg1">
+                            <p>jade_picon</p>
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <img src="./src/stories_background.jpg" alt="">
+                            <img alt="" id="storyImg2">
+                        </div>
+                        <p>thai.d.mel</p>
+                    </div>
+                    <div>
+                        <div>
+                            <img src="./src/stories_background.jpg" alt="">
+                            <img alt="" id="storyImg3">
+                        </div>
+                        <p>ingrid_gui</p>
+                    </div>
+                    <div>
+                        <div>
+                            <img src="./src/stories_background.jpg" alt="">
+                            <img alt="" id="storyImg4">
+                        </div>
+                        <p>gio.an</p>
+                    </div>
+                    <div>
+                        <div>
+                            <img src="./src/stories_background.jpg" alt="">
+                            <img alt="" id="storyImg5">
+                        </div>
+                        <p>alexandre_he</p>
+                    </div>
+                    <div>
+                        <div>
+                            <img src="./src/stories_background.jpg" alt="">
+                            <img alt="" id="storyImg6">
+                        </div>
+                        <p>mari.peso</p>
+                    </div>
+                    <div>
+                        <div>
+                            <img src="./src/stories_background.jpg" alt="">
+                            <img alt="" id="storyImg7">
+                        </div>
+                        <p>ju luziê</p>
+                    </div>
+                    <div>
+                        <div>
+                            <img src="./src/stories_background.jpg" alt="">
+                            <img alt="" id="storyImg8">
+                        </div>
+                        <p>lu_ferreira</p>
+                    </div>
                 </div>
             </div>
             <!--feed-->
