all ready to send

--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
         <!--side bar-->
         <div class="sideBar">
             <div class="profileCard">
-                <img src="./src/tab-icon.png" alt="">
+                <img id="myUserPicture" alt="">
                 <div>
-                    <h4>@yokuny</h4>
-                    <p>Felipe Rangel Ribeiro</p>
+                    <h4>@iso.profile</h4>
+                    <p>Felipe</p>
                 </div>
             </div>
             <div class="sugestões">
@@ -54,50 +54,50 @@
             <div class="usuariosSugeridos">
                 <div class="usuarioSugeridoCard">
                     <div class="sugestãoCardContent">
-                        <div><img src="./src/tab-icon.png" alt=""></div>
+                        <div><img id="hint1" alt=""></div>
                         <div>
-                            <h4>yokuny</h4>
-                            <p>Felipe Rangel Ribeiro</p>
+                            <h4>_lin.di</h4>
+                            <p>Lina Dreik</p>
                         </div>
                     </div>
                     <h4>Seguir</h4>
                 </div>
                 <div class="usuarioSugeridoCard">
                     <div class="sugestãoCardContent">
-                        <div><img src="./src/tab-icon.png" alt=""></div>
+                        <div><img id="hint2" alt=""></div>
                         <div>
-                            <h4>yokuny</h4>
-                            <p>Felipe Rangel Ribeiro</p>
+                            <h4>anni.illustr</h4>
+                            <p>Anna Pugacheva</p>
                         </div>
                     </div>
                     <h4>Seguir</h4>
                 </div>
                 <div class="usuarioSugeridoCard">
                     <div class="sugestãoCardContent">
-                        <div><img src="./src/tab-icon.png" alt=""></div>
+                        <div><img id="hint3" alt=""></div>
                         <div>
-                            <h4>yokuny</h4>
-                            <p>Felipe Rangel Ribeiro</p>
+                            <h4>agataserge</h4>
+                            <p>Agata Serge</p>
                         </div>
                     </div>
                     <h4>Seguir</h4>
                 </div>
                 <div class="usuarioSugeridoCard">
                     <div class="sugestãoCardContent">
-                        <div><img src="./src/tab-icon.png" alt=""></div>
+                        <div><img id="hint4" alt=""></div>
                         <div>
-                            <h4>yokuny</h4>
-                            <p>Felipe Rangel Ribeiro</p>
+                            <h4>badefuwa</h4>
+                            <p>Bade Fuwa</p>
                         </div>
                     </div>
                     <h4>Seguir</h4>
                 </div>
                 <div class="usuarioSugeridoCard">
                     <div class="sugestãoCardContent">
-                        <div><img src="./src/tab-icon.png" alt=""></div>
+                        <div><img id="hint5" alt=""></div>
                         <div>
-                            <h4>yokuny</h4>
-                            <p>Felipe Rangel Ribeiro</p>
+                            <h4>elrefai</h4>
+                            <p>Nour El Refai</p>
                         </div>
                     </div>
                     <h4>Seguir</h4>
