next and the last step
is to add comment section

--- a/index.html
+++ b/index.html
@@ -201,9 +201,15 @@
                     <div class="postCardFooter">
                         <div class="postCardButtons">
                             <div>
-                                <ion-icon name="heart-outline"></ion-icon>
-                                <ion-icon name="chatbubble-outline"></ion-icon>
-                                <ion-icon name="paper-plane-outline"></ion-icon>
+                                <div id="h35f" onclick="coracao(this.id)">
+                                    <ion-icon name="heart-outline" ></ion-icon>
+                                </div>
+                                <div>
+                                    <ion-icon name="chatbubble-outline"></ion-icon>
+                                </div>
+                                <div>
+                                    <ion-icon name="paper-plane-outline"></ion-icon>
+                                </div>
                             </div>
                             <div>
                                 <ion-icon name="bookmark-outline"></ion-icon>
@@ -233,9 +239,15 @@
                     <div class="postCardFooter">
                         <div class="postCardButtons">
                             <div>
-                                <ion-icon name="heart-outline"></ion-icon>
-                                <ion-icon name="chatbubble-outline"></ion-icon>
-                                <ion-icon name="paper-plane-outline"></ion-icon>
+                                <div id="f4xx" onclick="coracao(this.id)">
+                                    <ion-icon name="heart-outline" ></ion-icon>
+                                </div>
+                                <div>
+                                    <ion-icon name="chatbubble-outline"></ion-icon>
+                                </div>
+                                <div>
+                                    <ion-icon name="paper-plane-outline"></ion-icon>
+                                </div>
                             </div>
                             <div>
                                 <ion-icon name="bookmark-outline"></ion-icon>
@@ -266,9 +278,15 @@
                     <div class="postCardFooter">
                         <div class="postCardButtons">
                             <div>
-                                <ion-icon name="heart-outline"></ion-icon>
-                                <ion-icon name="chatbubble-outline"></ion-icon>
-                                <ion-icon name="paper-plane-outline"></ion-icon>
+                                <div id="j46j" onclick="coracao(this.id)">
+                                    <ion-icon name="heart-outline" ></ion-icon>
+                                </div>
+                                <div>
+                                    <ion-icon name="chatbubble-outline"></ion-icon>
+                                </div>
+                                <div>
+                                    <ion-icon name="paper-plane-outline"></ion-icon>
+                                </div>
                             </div>
                             <div>
                                 <ion-icon name="bookmark-outline"></ion-icon>
@@ -284,5 +302,5 @@
         </div>
     </main>
 </body>
-<script src="stories.js"></script>
+<script src="script.js"></script>
 </html>
