mobile design bug fix

--- a/index.html
+++ b/index.html
@@ -195,7 +195,8 @@
                         <ion-icon name="ellipsis-horizontal"></ion-icon>
                     </div>
                     <!--post-->
-                    <div class="postContent" id="imgFeed1">
+                    <div class="postContent">
+                        <img src="https://mir-s3-cdn-cf.behance.net/project_modules/fs/bf2b5751890757.58fde1c257711.jpg" alt="">
                     </div>
                     <!--footer-->
                     <div class="postCardFooter">
@@ -271,7 +272,8 @@
                         <ion-icon name="ellipsis-horizontal"></ion-icon>
                     </div>
                     <!--post-->
-                    <div class="postContent" id="imgFeed3">
+                    <div class="postContent">
+                        <img src="https://cdnb.artstation.com/p/assets/images/images/028/075/249/large/yury-ostapchuk-train-scene-07-scale-shot-warm.jpg?1593427044" alt="">
                         
                     </div>
                     <!--footer-->
