new feature. save post to later

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                                     <ion-icon name="paper-plane-outline"></ion-icon>
                                 </div>
                             </div>
-                            <div>
+                            <div class="bookMark" id="nyyn53" onclick="salvar(this.id)">
                                 <ion-icon name="bookmark-outline"></ion-icon>
                             </div>
                         </div>
@@ -250,7 +250,7 @@
                                     <ion-icon name="paper-plane-outline"></ion-icon>
                                 </div>
                             </div>
-                            <div>
+                            <div class="bookMark" id="g3gh" onclick="salvar(this.id)">
                                 <ion-icon name="bookmark-outline"></ion-icon>
                             </div>
                         </div>
@@ -290,7 +290,7 @@
                                     <ion-icon name="paper-plane-outline"></ion-icon>
                                 </div>
                             </div>
-                            <div>
+                            <div class="bookMark" id="hj6kk" onclick="salvar(this.id)">
                                 <ion-icon name="bookmark-outline"></ion-icon>
                             </div>
                         </div>
