i just have to implement comment function

--- a/index.html
+++ b/index.html
@@ -127,57 +127,49 @@
             <!--story-->
             <nav class="stories">
                 <div id="storiesSize">
-                    <div>
-                        <div>
+                    <div><div>
                             <img src="./src/stories_background.jpg" alt="">
                             <img alt="" id="storyImg1">
                             <p>jade_picon</p>
                         </div>
                     </div>
-                    <div>
-                        <div>
+                    <div><div>
                             <img src="./src/stories_background.jpg" alt="">
                             <img alt="" id="storyImg2">
                         </div>
                         <p>thai.d.mel</p>
                     </div>
-                    <div>
-                        <div>
+                    <div><div>
                             <img src="./src/stories_background.jpg" alt="">
                             <img alt="" id="storyImg3">
                         </div>
                         <p>ingrid_gui</p>
                     </div>
-                    <div>
-                        <div>
+                    <div><div>
                             <img src="./src/stories_background.jpg" alt="">
                             <img alt="" id="storyImg4">
                         </div>
                         <p>gio.an</p>
                     </div>
-                    <div>
-                        <div>
+                    <div><div>
                             <img src="./src/stories_background.jpg" alt="">
                             <img alt="" id="storyImg5">
                         </div>
                         <p>alexandre_he</p>
                     </div>
-                    <div>
-                        <div>
+                    <div><div>
                             <img src="./src/stories_background.jpg" alt="">
                             <img alt="" id="storyImg6">
                         </div>
                         <p>mari.peso</p>
                     </div>
-                    <div>
-                        <div>
+                    <div><div>
                             <img src="./src/stories_background.jpg" alt="">
                             <img alt="" id="storyImg7">
                         </div>
                         <p>ju luziê</p>
                     </div>
-                    <div>
-                        <div>
+                    <div><div>
                             <img src="./src/stories_background.jpg" alt="">
                             <img alt="" id="storyImg8">
                         </div>
@@ -207,12 +199,8 @@
                                     <div id="h35f" onclick="coracao(this.id)">
                                         <ion-icon name="heart-outline" ></ion-icon>
                                     </div>
-                                    <div>
-                                        <ion-icon name="chatbubble-outline"></ion-icon>
-                                    </div>
-                                    <div>
-                                        <ion-icon name="paper-plane-outline"></ion-icon>
-                                    </div>
+                                    <div><ion-icon name="chatbubble-outline"></ion-icon></div>
+                                    <div><ion-icon name="paper-plane-outline"></ion-icon></div>
                                 </div>
                                 <div class="bookMark" id="nyyn53" onclick="salvar(this.id)">
                                     <ion-icon name="bookmark-outline"></ion-icon>
@@ -246,12 +234,8 @@
                                     <div id="f4xx" onclick="coracao(this.id)">
                                         <ion-icon name="heart-outline" ></ion-icon>
                                     </div>
-                                    <div>
-                                        <ion-icon name="chatbubble-outline"></ion-icon>
-                                    </div>
-                                    <div>
-                                        <ion-icon name="paper-plane-outline"></ion-icon>
-                                    </div>
+                                    <div><ion-icon name="chatbubble-outline"></ion-icon></div>
+                                    <div><ion-icon name="paper-plane-outline"></ion-icon></div>
                                 </div>
                                 <div class="bookMark" id="g3gh" onclick="salvar(this.id)">
                                     <ion-icon name="bookmark-outline"></ion-icon>
@@ -286,12 +270,8 @@
                                     <div id="j46j" onclick="coracao(this.id)">
                                         <ion-icon name="heart-outline" ></ion-icon>
                                     </div>
-                                    <div>
-                                        <ion-icon name="chatbubble-outline"></ion-icon>
-                                    </div>
-                                    <div>
-                                        <ion-icon name="paper-plane-outline"></ion-icon>
-                                    </div>
+                                    <div><ion-icon name="chatbubble-outline"></ion-icon></div>
+                                    <div><ion-icon name="paper-plane-outline"></ion-icon></div>
                                 </div>
                                 <div class="bookMark" id="hj6kk" onclick="salvar(this.id)">
                                     <ion-icon name="bookmark-outline"></ion-icon>
@@ -301,6 +281,23 @@
                                 <img id="likeImgUser3">
                                 <p>Curtido por</p><h4>fake.avatar</h4><p>e</p><h4> outras 10.542 pessoas</h4></p>
                             </div>
+                            <!--comments-->
+                            <section class="comments">
+                                <div class="postDescription">
+                                    <div>
+                                        <h4>tanki x</h4><p>Humanity is mind-controlled and only slightly more conscious than your average zombie.</p>
+                                    </div>
+                                    <div>
+                                        <h4>tanki x</h4><p>Humanity is mind-controlled and only slightly more conscious than your average zombie.</p>
+
+                                    </div>
+                                </div>
+                                <div class="commentInput">
+                                    <ion-icon name="happy-outline"></ion-icon>
+                                    <input id="io4jo5" onclick="comentar(this.id)" type="text" placeholder="Adicione um comentário...">
+                                    <h4>Sends</h4>
+                                </div>
+                            </section>
                         </div>
                     </div>
                 </div>
