the function to add comments is made
and all is working fine. the project is done

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                                     <h4>tanki x</h4><p>Humanity is mind-controlled and only slightly more conscious than your average zombie.</p>
                                 </div>
                                 <!--newComments-->
-                                <div id="comentField-idxxo4jo5">
+                                <div id="comentField-id-j56jg">
                                     <div class="newComment">
                                         <div class="theComment">
                                             <div>
@@ -225,14 +225,12 @@
                                             <ion-icon name="heart-outline"></ion-icon>
                                         </div>
                                     </div>
-                                    
                                 </div>
-                                
                                 <!--input-->
                                 <div class="commentInput">
                                     <ion-icon name="happy-outline"></ion-icon>
-                                    <input id="xxo4jo5" onclick="comentar(this.id)" type="text" placeholder="Adicione um comentário...">
-                                    <h4>Sends</h4>
+                                    <input id="j56jg" type="text" placeholder="Adicione um comentário...">
+                                    <h4 onclick="comentar('j56jg')">Sends</h4>
                                 </div>
                             </section>
                         </div>
@@ -276,7 +274,7 @@
                                     <h4>tanki x</h4><p>Humanity is mind-controlled and only slightly more conscious than your average zombie.</p>
                                 </div>
                                 <!--newComments-->
-                                <div id="comentField-idxxo4jo5">
+                                <div id="comentField-id-rrbbh">
                                     <div class="newComment">
                                         <div class="theComment">
                                             <div>
@@ -299,8 +297,8 @@
                                 <!--input-->
                                 <div class="commentInput">
                                     <ion-icon name="happy-outline"></ion-icon>
-                                    <input id="xxo4jo5" onclick="comentar(this.id)" type="text" placeholder="Adicione um comentário...">
-                                    <h4>Sends</h4>
+                                    <input id="rrbbh" type="text" placeholder="Adicione um comentário...">
+                                    <h4 onclick="comentar('rrbbh')">Sends</h4>
                                 </div>
                             </section>
                         </div>
@@ -349,7 +347,7 @@
                                     <h4>tanki x</h4><p>Humanity is mind-controlled and only slightly more conscious than your average zombie.</p>
                                 </div>
                                 <!--newComments-->
-                                <div id="comentField-idxxo4jo5">
+                                <div id="comentField-id-xxo4jo5">
                                     <div class="newComment">
                                         <div class="theComment">
                                             <div>
@@ -379,8 +377,8 @@
                                 <!--input-->
                                 <div class="commentInput">
                                     <ion-icon name="happy-outline"></ion-icon>
-                                    <input id="xxo4jo5" onclick="comentar(this.id)" type="text" placeholder="Adicione um comentário...">
-                                    <h4>Sends</h4>
+                                    <input id="xxo4jo5" type="text" placeholder="Adicione um comentário...">
+                                    <h4  onclick="comentar('xxo4jo5')">Sends</h4>
                                 </div>
                             </section>
                         </div>
