--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
                             </div>
                             <div class="postCardLikes">
                                 <img id="likeImgUser3">
-                                <p>Curtido por</p><h4>fake.avatar</h4><p>e</p><h4> outras 10.542 pessoas</h4></p>
+                                <p>Curtido por</p><h4>fake.avatar</h4><p>e</p><h4> outras 1M pessoas</h4></p>
                             </div>
                             <!--comments-->
                             <section class="comments">
