all done. more a project is made

--- a/index.html
+++ b/index.html
@@ -126,6 +126,9 @@
         <main class="mainContent">
             <!--story-->
             <nav class="stories">
+                <div class="floatingStorieButton">
+                    <ion-icon name="chevron-forward-circle"></ion-icon>
+                </div>
                 <div id="storiesSize">
                     <div><div>
                             <img src="./src/stories_background.jpg" alt="">
@@ -305,11 +308,6 @@
                     </div>
                 </section>
     
-
-
-
-
-
                 <section class="feed">
                     <div class="postCard">
                         <div class="postCardHeader">
