I changed the legends of the feed posts

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                         <div class="postCardHeader">
                             <div class="postOwnerName">
                                 <img alt="" id="userPostImg1">
-                                <h4>_tanki_x</h4>
+                                <h4>runner</h4>
                             </div>
                             <ion-icon name="ellipsis-horizontal"></ion-icon>
                         </div>
@@ -216,7 +216,7 @@
                             <!--comments-->
                             <section class="comments">
                                 <div class="postDescription">
-                                    <h4>tanki x</h4><p>Humanity is mind-controlled and only slightly more conscious than your average zombie.</p>
+                                    <h4>runner</h4><p>Every person remembers some moment in their life where they witnessed some injustice, big or small, and looked away because the consequences of intervening seemed too intimidating. But there’s a limit to the amount of incivility and inequality and inhumanity that each individual can tolerate.</p>
                                 </div>
                                 <!--newComments-->
                                 <div id="comentField-id-j56jg">
@@ -274,7 +274,7 @@
                             <!--comments-->
                             <section class="comments">
                                 <div class="postDescription">
-                                    <h4>tanki x</h4><p>Humanity is mind-controlled and only slightly more conscious than your average zombie.</p>
+                                    <h4>yury.ostapchuk</h4><p>Humanity is mind-controlled and only slightly more conscious than your average zombie.</p>
                                 </div>
                                 <!--newComments-->
                                 <div id="comentField-id-rrbbh">
@@ -342,7 +342,7 @@
                             <!--comments-->
                             <section class="comments">
                                 <div class="postDescription">
-                                    <h4>tanki x</h4><p>Humanity is mind-controlled and only slightly more conscious than your average zombie.</p>
+                                    <h4>tanki x</h4><p>To live in the world without becoming aware of the meaning of the world is like wandering about in a great library without touching the books.</p>
                                 </div>
                                 <!--newComments-->
                                 <div id="comentField-id-xxo4jo5">
